<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_wave_2_"
    tools:context=".bottomNav.setting.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_22sdp"
        app:cardElevation="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_admin_textView"
                android:gravity="center"
                android:textSize="@dimen/_30sdp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/name"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingRight="@dimen/_6sdp"
                    android:autofillHints="name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:singleLine="true"
                    android:paddingEnd="@dimen/_6sdp"
                    android:paddingLeft="@dimen/_6sdp"
                    android:autofillHints="emailAddress"
                    android:paddingRight="@dimen/_6sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/phone_number"
                    android:maxLength="12"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:autofillHints="phone"
                    android:paddingRight="@dimen/_6sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:autofillHints="password"
                    android:paddingRight="@dimen/_6sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_6sdp"
                    android:singleLine="true"
                    android:paddingLeft="@dimen/_6sdp"
                    android:paddingEnd="@dimen/_6sdp"
                    android:autofillHints="password"
                    android:paddingRight="@dimen/_6sdp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="30dp"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:background="@drawable/edit_text_border"
                android:hint="Enter OTP"
                android:padding="@dimen/_12sdp"
                android:autofillHints="Enter OTP"
                android:inputType="number" />

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:backgroundTint="@color/teal_200"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/already_register"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>